[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/lobby.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.21606
margin_right = 2.21606
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -208.0
margin_right = 368.0
margin_bottom = 208.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="start" type="Button" parent="players"]
margin_left = 64.0
margin_top = 320.0
margin_right = 192.0
margin_bottom = 384.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ready" type="Button" parent="players"]
margin_left = 64.0
margin_top = 320.0
margin_right = 192.0
margin_bottom = 384.0
text = "READY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="ItemList" parent="players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maps" type="ItemList" parent="players"]
margin_left = 286.0
margin_top = 32.0
margin_right = 496.0
margin_bottom = 384.0
mouse_default_cursor_shape = 2
items = [ "1", ExtResource( 2 ), false, "2", ExtResource( 2 ), false, "3", ExtResource( 2 ), false, "4", ExtResource( 2 ), false ]
allow_reselect = true
same_column_width = true
icon_mode = 0
icon_scale = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="players/ready" to="." method="_on_ready_pressed"]
[connection signal="item_selected" from="players/maps" to="." method="_on_maps_item_selected"]
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
